# serverless-rust-sandbox

./: Cargo.toml  package-lock.json  package.json
benchmark/: benchmark.ts
deployment/lib/: lambda-stack.ts
