[package]
name = "sls_rust_minimal"
version = "1.0.0"
authors = ["Christian Kjaer <ckl@codetalk.io>"]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "bootstrap"
path = "src/bin/bootstrap.rs"

[profile.release]
panic = 'abort' # Less code to include into binary.
codegen-units = 1 # Optimization over all codebase (better optimization, slower build).
opt-level = 'z' # Optimization for size (or 's' for a less aggressiv alternative).
lto = true # Link time optimization using using whole-program analysis.

[dependencies]
lambda = { package = "netlify_lambda", version = "0.2.0" }
tokio = "1.18.1"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.80"

[dev-dependencies]
pretty_assertions = "1.2.1"
